<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.WelcomeFragment">
    <!-- Used LinearLayout to organize elements vertically -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:tag="layout/welcome_fragment">

        <ImageView
            android:id="@+id/welcomeImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/welcome_image_description"
            android:src="@drawable/welcome_illustration" />

        <TextView
            android:id="@+id/headerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:padding="@dimen/text_padding"
            android:text="@string/welcome_header_text"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/descriptionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:fontFamily="@font/roboto"
            android:padding="@dimen/text_padding"
            android:text="@string/welcome_description_text"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Button
            android:id="@+id/welcomeButton"
            style="@style/primary_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/button_margin"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/roboto"
            android:minHeight="52dip"
            android:padding="@dimen/text_padding"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textSize="@dimen/button_text_size" />
    </LinearLayout>
</layout>