<?xml version="1.0" encoding="utf-8"?>
<!-- Used LinearLayout to vertically align all elements -->
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.udacity.shoestore.viewModels.ShoeViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/text_margin"
        android:layout_marginEnd="@dimen/text_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:fontFamily="@font/roboto"
            android:text="@string/shoe_name_text"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/nameEditText"
            style="@style/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/shoe_name_text"
            android:text="@={viewModel.shoeName}"
            android:inputType="textPersonName"
            android:paddingBottom="12dp" />

        <TextView
            android:id="@+id/companyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:fontFamily="@font/roboto"
            android:text="@string/shoe_company_text"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/companyEditText"
            style="@style/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/shoe_company_text"
            android:text="@={viewModel.shoeCompany}"
            android:inputType="textPersonName"
            android:paddingBottom="12dp" />

        <TextView
            android:id="@+id/sizeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:fontFamily="@font/roboto"
            android:text="@string/shoe_size_text"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/sizeEditText"
            style="@style/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="e.g. 42"
            android:text="@={viewModel.shoeSize}"
            android:inputType="numberDecimal"
            android:paddingBottom="12dp" />

        <TextView
            android:id="@+id/descriptionShoeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:fontFamily="@font/roboto"
            android:text="@string/shoe_description_text"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/descriptionEditText"
            style="@style/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/shoe_company_text"
            android:text="@={viewModel.shoeDescription}"
            android:inputType="text"
            android:paddingBottom="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelButton"
                style="@style/secondary_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/button_margin"
                android:layout_weight="0.5"
                android:text="@string/cancel_text"
                android:textAllCaps="false"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="24sp" />

            <Button
                android:id="@+id/saveButton"
                style="@style/primary_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/button_margin"
                android:layout_weight="0.5"
                android:text="@string/save_text"
                android:textAllCaps="false"
                android:textSize="24sp" />
        </LinearLayout>

    </LinearLayout>
</layout>